don't hover on mobile, tabs vs spaces fight

--- a/src/scss/frontend/masthead/_menu.scss
+++ b/src/scss/frontend/masthead/_menu.scss
@@ -43,9 +43,11 @@
 		position: relative;
 		z-index: 2;
 	}
-		a:hover,a:focus {
-			color: var(--#{$PREFIX}-color-main_menu-foreground-hover_foreground);
-			background-color: var(--#{$PREFIX}-color-main_menu-foreground-hover_background);
+		@media not all and (hover: none) {
+			a:hover,a:focus {
+				color: var(--#{$PREFIX}-color-main_menu-foreground-hover_foreground);
+				background-color: var(--#{$PREFIX}-color-main_menu-foreground-hover_background);
+			}
 		}
 
 	body.menu-active & {
