--- a/src/scss/frontend/_pagination.scss
+++ b/src/scss/frontend/_pagination.scss
@@ -1,37 +1,39 @@
 aside.pagination {
-    margin: 2em 0 1em;
-    text-align: center;
+	margin: 2em 0 1em;
+	text-align: center;
 
-    ul, li {
-        display: inline-block;
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
-    .nav-links::before {
-        content: 'Pages: ';
-    }
+	ul, li {
+		display: inline-block;
+		list-style: none;
+		margin: 0;
+		padding: 0;
+	}
+	.nav-links::before {
+		content: 'Pages: ';
+	}
 
-    .page-numbers {
-        display: inline-block;
-    }
+	.page-numbers {
+		display: inline-block;
+	}
 
-    span.page-numbers,
-    a.page-numbers {
-        background: rgba(0,0,0,0.1);
-        padding: .25em .5em;
-    }
-    a.page-numbers {
-        background: rgba(0,0,0,0.5);
-        color: #fff;
-        text-decoration: none;
+	span.page-numbers,
+	a.page-numbers {
+		background: rgba(0,0,0,0.1);
+		padding: .25em .5em;
+	}
+	a.page-numbers {
+		background: rgba(0,0,0,0.5);
+		color: #fff;
+		text-decoration: none;
 
-        &:hover {
-            background: #000;
-        }
-    }
-    span.dots {
-        background: none;
-    }
+		@media not all and (hover: none) {
+			&:hover {
+				background: #000;
+			}
+		}
+	}
+	span.dots {
+		background: none;
+	}
 
 }
