--- a/src/scss/frontend/footer/_.scss
+++ b/src/scss/frontend/footer/_.scss
@@ -62,9 +62,11 @@ body > footer {
 		color: inherit;
 		text-decoration: none;
 
-		&:hover {
-			color: var(--#{$PREFIX}-color-highlight);
-			text-decoration: underline;
+		@media not all and (hover: none) {
+			&:hover {
+				color: var(--#{$PREFIX}-color-highlight);
+				text-decoration: underline;
+			}
 		}
 	}
 
