--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -47,10 +47,8 @@ a {
 	color: var(--#{$PREFIX}-color-brand);
 	outline: 0;
 
-	@media not all and (hover: none) {
-		&:hover, &:focus {
-			color: var(--#{$PREFIX}-color-highlight);
-		}
+	@include hover{
+		color: var(--#{$PREFIX}-color-highlight);
 	}
 	@media (hover: none) {
 		color: var(--#{$PREFIX}-color-brand);
