--- a/src/scss/frontend/footer/_.scss
+++ b/src/scss/frontend/footer/_.scss
@@ -62,11 +62,9 @@ body > footer {
 		color: inherit;
 		text-decoration: none;
 
-		@media not all and (hover: none) {
-			&:hover {
-				color: var(--#{$PREFIX}-color-highlight);
-				text-decoration: underline;
-			}
+		@include hover {
+			color: var(--#{$PREFIX}-color-highlight);
+			text-decoration: underline;
 		}
 	}
 
