--- a/src/scss/frontend/masthead/_menu.scss
+++ b/src/scss/frontend/masthead/_menu.scss
@@ -43,8 +43,8 @@
 		position: relative;
 		z-index: 2;
 	}
-		@media not all and (hover: none) {
-			a:hover,a:focus {
+		a {
+			@include hover {
 				color: var(--#{$PREFIX}-color-main_menu-foreground-hover_foreground);
 				background-color: var(--#{$PREFIX}-color-main_menu-foreground-hover_background);
 			}
