body color and $content_width

--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -25,6 +25,10 @@ html,body {
 	line-height: var(--#{$PREFIX}-font-base_lineheight);
 }
 
+body {
+	background-color: var(--#{$PREFIX}-color-content-background);
+}
+
 h1, h2, h3, h4, h5, h6 {
 	display: block;
 	font-size: 1em;
