faster kadance button transitions

--- a/src/scss/shared/_hacks.scss
+++ b/src/scss/shared/_hacks.scss
@@ -59,6 +59,11 @@
 	width: 100%;
 }
 
+// Faster transitions for kadance advanced buttons
+.kt-btn-wrap .kt-button {
+	transition-duration: .15s;
+}
+
 // Allow audio player to get smaller
 .wp-block-audio audio {
 	min-width: 150px;
