force faster transitions for kt buttons

--- a/src/scss/shared/_hacks.scss
+++ b/src/scss/shared/_hacks.scss
@@ -60,7 +60,7 @@
 }
 
 // Faster transitions for kadance advanced buttons
-.kt-btn-wrap .kt-button {
+:root .kt-btn-wrap .kt-button {
 	transition-duration: .15s;
 }
 
