only child figures should be inline-block

--- a/src/scss/shared/_hacks.scss
+++ b/src/scss/shared/_hacks.scss
@@ -8,6 +8,11 @@
     height: auto;
 }
 
+// Only child figures should be inline-block
+figure:only-child {
+	display: inline-block;
+}
+
 // Handle Kadence inherit max content width from theme
 .kb-theme-content-width {
 	max-width: $width-max;
