another attempt to force only-child figures to inline

--- a/src/scss/shared/_hacks.scss
+++ b/src/scss/shared/_hacks.scss
@@ -9,7 +9,7 @@
 }
 
 // Only child figures should be inline-block
-figure:only-child {
+:root figure.wp-block-image:only-child {
 	display: inline-block;
 }
 
