linked figures should be inline-block

--- a/src/scss/shared/_hacks.scss
+++ b/src/scss/shared/_hacks.scss
@@ -14,6 +14,11 @@
 	margin-bottom: 0;
 }
 
+// figures with links should be inline-blocks
+:root figure a {
+	display: inline-block;
+}
+
 .nomargin {
 	margin: 0;
 }
