added search to menu options + support

--- a/src/scss/frontend/_pagination.scss
+++ b/src/scss/frontend/_pagination.scss
@@ -10,6 +10,10 @@ aside.pagination {
 	}
 	.nav-links::before {
 		content: 'Pages: ';
+
+		@include phone() {
+			content: '';
+		}
 	}
 
 	.page-numbers {
