--- a/src/scss/frontend/_search.scss
+++ b/src/scss/frontend/_search.scss
@@ -1,4 +1,8 @@
 main.search {
+    .row-container {
+        max-width: 900px;
+    }
+
     header.page_title {
         text-align: left;
         margin-bottom: 1em;
@@ -18,6 +22,10 @@ main.search {
             border-bottom: 0;
         }
 
+        & > * {
+            flex: 1;
+        }
+
         a {
             text-decoration: none;
             color: inherit;
@@ -31,9 +39,10 @@ main.search {
         }
 
         .featured-image {
-            border: 1px solid rgba(0,0,0, 0.3);
+            border: 1px solid rgba(0,0,0, 0.2);
+            border-radius: .25em;
             float: left;
-            width: 10%;
+            width: 15%;
             margin: 0 1em 0 0;
             padding: .25em;
 
@@ -44,7 +53,7 @@ main.search {
             }
 
             & ~ header, & ~ .body {
-                padding-left: calc(10% + 1em);
+                padding-left: calc(15% + 1em);
             }
 
             @include phone() {
