fix for body content p/list margins

--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -133,6 +133,8 @@ figure.wp-block-video figcaption {
 }
 
 .body {
+	p, ol, ul, li { margin-bottom: .75em; }
+	li li { margin-bottom: .25em; }
 	p:last-child { margin-bottom: 0; }
 }
 
