Support alternate font for body h# tags

--- a/src/default_variables.scss
+++ b/src/default_variables.scss
@@ -45,6 +45,7 @@
 	--#{$PREFIX}-color-favicon-chrome: #00598e;
 
 	--#{$PREFIX}-font-font_family: 'Montserrat', sans-serif;
+	--#{$PREFIX}-font-header_family: inherit;
 	--#{$PREFIX}-font-base_size: 19px;
 	--#{$PREFIX}-font-base_lineheight: 1.3;
 
