--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -132,10 +132,14 @@ figure.wp-block-video figcaption {
 	text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
 }
 
-.body {
+.body,
+body.editor-styles-wrapper {
 	p, ol, ul, li { margin-bottom: .75em; }
 	li li { margin-bottom: .25em; }
 	p:last-child { margin-bottom: 0; }
+	h2, h3, h4, h5, h6 {
+		font-family: var(--#{$PREFIX}-font-header_family);
+	}
 }
 
 .no-link-underline a,
