expand default font-family

--- a/src/default_variables.scss
+++ b/src/default_variables.scss
@@ -44,7 +44,7 @@
 	--#{$PREFIX}-color-favicon-mstile: #00598e;
 	--#{$PREFIX}-color-favicon-chrome: #00598e;
 
-	--#{$PREFIX}-font-font_family: 'Montserrat', sans-serif;
+	--#{$PREFIX}-font-font_family: 'Montserrat', Helvetica, Arial, sans-serif;
 	--#{$PREFIX}-font-header_family: inherit;
 	--#{$PREFIX}-font-base_size: 19px;
 	--#{$PREFIX}-font-base_lineheight: 1.45;
