--- a/src/scss/frontend/_search.scss
+++ b/src/scss/frontend/_search.scss
@@ -1,84 +1,115 @@
 main.search {
-    .row-container {
-        max-width: 900px;
-    }
+	.row-container {
+		max-width: 900px;
+	}
 
-    header.page_title {
-        text-align: left;
-        margin-bottom: 1em;
-        h1 {
-            font-size: 1.5em;
-        }
-    }
+	header.page_title {
+		text-align: left;
+		margin-bottom: 1em;
+		h1 {
+			font-size: 1.75em;
+			margin-bottom: .25em;
+		}
 
-    article {
-        display: flex;
-        text-align: left;
-        margin-bottom: 1em;
-        padding-bottom: 1em;
-        border-bottom: 1px solid rgba(0,0,0,0.1);
+		.search, .search li {
+			list-style: none;
+			margin: 0;
+			padding: 0;
+		}
+		.search {
+			input {
+				display: inline-block;
+				background: rgba(0,0,0,0.15);
+				font-size: 1em;
+				line-height: 1;
+				padding: .25em .5em;
+				border: 0;
+				border-radius: .15em;
+				transition: all .15s;
 
-        &:last-child {
-            border-bottom: 0;
-        }
+				&[type="submit"] {
+					border: 1px solid transparent;
+					background: var(--#{$PREFIX}-color-brand);
+					color: #fff;
 
-        & > * {
-            flex: 1;
-        }
+					@include hover {
+						background: var(--#{$PREFIX}-color-highlight);
+					}
+				}
+			}
+		}
+	}
+	/*
 
-        a {
-            text-decoration: none;
-            color: inherit;
+	article {
+		display: flex;
+		text-align: left;
+		margin-bottom: 1em;
+		padding-bottom: 1em;
+		border-bottom: 1px solid rgba(0,0,0,0.1);
 
-            @include hover() {
-                h2, h3 {
-                    color: var(--#{$PREFIX}-color-brand);
-                    text-decoration: underline;
-                }
-            }
-        }
+		&:last-child {
+			border-bottom: 0;
+		}
 
-        .featured-image {
-            border: 1px solid rgba(0,0,0, 0.2);
-            border-radius: .25em;
-            float: left;
-            width: 15%;
-            margin: 0 1em 0 0;
-            padding: .25em;
+		& > * {
+			flex: 1;
+		}
 
-            img {
-                display: block;
-                max-width: 100%;
-                height: auto;
-            }
+		a {
+			text-decoration: none;
+			color: inherit;
 
-            & ~ header, & ~ .body {
-                padding-left: calc(15% + 1em);
-            }
+			@include hover() {
+				h2, h3 {
+					color: var(--#{$PREFIX}-color-brand);
+					text-decoration: underline;
+				}
+			}
+		}
 
-            @include phone() {
-                float: none;
-                width: 20%;
-                margin: 0 1em .5em 0;
+		.featured-image {
+			border: 1px solid rgba(0,0,0, 0.2);
+			border-radius: .25em;
+			float: left;
+			width: 15%;
+			margin: 0 1em 0 0;
+			padding: .25em;
 
-                & ~ header, & ~ .body {
-                    padding-left: 0
-                }
-            }
-        }
+			img {
+				display: block;
+				max-width: 100%;
+				height: auto;
+			}
 
-        header {
-            text-align: left;
-            margin-bottom: .25em;
+			& ~ header, & ~ .body {
+				padding-left: calc(15% + 1em);
+			}
 
-            h2, h3 {
-                margin-bottom: .05em;
-            }
+			@include phone() {
+				float: none;
+				width: 20%;
+				margin: 0 1em .5em 0;
 
-            .meta {
-                font-size: 0.75em;
-            }
-        }
+				& ~ header, & ~ .body {
+					padding-left: 0
+				}
+			}
+		}
 
-    }
+		header {
+			text-align: left;
+			margin-bottom: .25em;
+
+			h2, h3 {
+				margin-bottom: .05em;
+			}
+
+			.meta {
+				font-size: 0.75em;
+			}
+		}
+
+	}
+	*/
 }
