fix default content background color

--- a/src/default_variables.scss
+++ b/src/default_variables.scss
@@ -29,7 +29,7 @@
 	--#{$PREFIX}-setting-main_menu-background-position: top left;
 	--#{$PREFIX}-setting-main_menu-background-size: cover;
 
-	--#{$PREFIX}-color-content-background: #000000;
+	--#{$PREFIX}-color-content-background: #ffffff;
 	--#{$PREFIX}-color-content-foreground: #000000;
 
 	--#{$PREFIX}-color-footer-background: #000000;
