--- a/src/scss/frontend/_archive.scss
+++ b/src/scss/frontend/_archive.scss
@@ -127,7 +127,7 @@ main.search {
 
 		figure.featured-image {
 			display: block;
-			//float: left;
+			line-height: 0;
 			margin: 0 1em 0 0;
 			max-width: 200px;
 
