--- a/src/scss/frontend/footer/_.scss
+++ b/src/scss/frontend/footer/_.scss
@@ -5,18 +5,26 @@ body > footer {
 
 	padding: 3vh 2vw;
 	font-size: 0.75rem;
-	
+
 	position: relative;
 	z-index: 1;
 
 	user-select: none;
 
 	.row-container {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: nowrap;
+		gap: 1.5rem;
+		align-items: center;
+		justify-content: space-between;
+		/*
 		display: grid;
 		grid-template-columns: min-content max-content 1fr;
 		grid-template-rows: 100%;
 		grid-template-areas: "foot_logo foot_nav foot_copyright";
 		grid-column-gap: 3em;
+		*/
 
 		padding: 0;
 
@@ -25,6 +33,8 @@ body > footer {
 		}
 
 		@include phone {
+			flex-wrap: wrap;
+			/*
 			grid-template-columns: 100%;
 			grid-template-rows: max-content;
 			grid-template-areas:
@@ -34,13 +44,21 @@ body > footer {
 			grid-row-gap: 1em;
 			justify-items: center;
 			text-align: center;
+			*/
 		}
 	}
 
 	.logo {
 		grid-area: foot_logo;
 		height: 90px;
+		width: min-content;
 		//max-width: 200px;
+
+		@include phone {
+			width: 60%;
+			height: auto;
+			text-align: center;
+		}
 
 		a {
 			display: block;
@@ -52,10 +70,12 @@ body > footer {
 			height: 100%;
 			width: auto;
 
+			/*
 			@include phone {
 				width: 80%;
 				margin: 0 auto;
 			}
+			*/
 		}
 	}
 
@@ -79,9 +99,9 @@ body > footer {
 		grid-area: foot_nav;
 
 		& > ul {
-			display: flex;
+			//display: flex;
 			column-count: 4;
-			column-gap: .25em;
+			column-gap: .75em;
 			height: 100%;
 
 			li {
@@ -103,6 +123,8 @@ body > footer {
 			}
 		}
 	}
+
+	@import './_social_menu.scss';
 
 	.copyright {
 		grid-area: foot_copyright;
