--- a/src/scss/shared/_.scss
+++ b/src/scss/shared/_.scss
@@ -5,6 +5,7 @@ $width-small: 640px;
 
 //@import "_variables";
 @import "_functions";
+@import "mixins/_";
 @import "_wpcore";
 @import "_basics";
 @import "_colors";
@@ -12,3 +13,4 @@ $width-small: 640px;
 @import "_hacks";
 @import "_flexcard";
 @import "_social-links";
+@import "blocks/_";
