switch footer from grid to flexbox

--- a/src/scss/frontend/footer/_.scss
+++ b/src/scss/frontend/footer/_.scss
@@ -18,13 +18,6 @@ body > footer {
 		gap: 1.5rem;
 		align-items: center;
 		justify-content: space-between;
-		/*
-		display: grid;
-		grid-template-columns: min-content max-content 1fr;
-		grid-template-rows: 100%;
-		grid-template-areas: "foot_logo foot_nav foot_copyright";
-		grid-column-gap: 3em;
-		*/
 
 		padding: 0;
 
@@ -33,31 +26,18 @@ body > footer {
 		}
 
 		@include phone {
+			flex-direction: column;
 			flex-wrap: wrap;
-			/*
-			grid-template-columns: 100%;
-			grid-template-rows: max-content;
-			grid-template-areas:
-				"foot_logo"
-				"foot_nav"
-				"foot_copyright";
-			grid-row-gap: 1em;
-			justify-items: center;
-			text-align: center;
-			*/
+			justify-content: center;
 		}
 	}
 
 	.logo {
-		grid-area: foot_logo;
 		height: 90px;
 		width: min-content;
-		//max-width: 200px;
 
 		@include phone {
-			width: 60%;
-			height: auto;
-			text-align: center;
+			display: none;
 		}
 
 		a {
@@ -69,13 +49,6 @@ body > footer {
 			display: block;
 			height: 100%;
 			width: auto;
-
-			/*
-			@include phone {
-				width: 80%;
-				margin: 0 auto;
-			}
-			*/
 		}
 	}
 
@@ -96,10 +69,8 @@ body > footer {
 	}
 
 	.menu {
-		grid-area: foot_nav;
 
 		& > ul {
-			//display: flex;
 			column-count: 4;
 			column-gap: .75em;
 			height: 100%;
@@ -107,13 +78,13 @@ body > footer {
 			li {
 				display: block;
 				margin: 0 1em .25em 0;
-				//overflow: hidden;
 			}
 
 			@include phone {
 				display: block;
 				column-count: 1;
 				font-size: 0.9rem;
+				text-align: center;
 				margin-top: .5em;
 
 				li {
@@ -127,7 +98,6 @@ body > footer {
 	@import './_social_menu.scss';
 
 	.copyright {
-		grid-area: foot_copyright;
 		text-align: right;
 
 		@include phone {
