--- a/src/scss/frontend/archives/list.scss
+++ b/src/scss/frontend/archives/list.scss
@@ -11,7 +11,7 @@
 		@include phone {
 			float: none;
 			max-width: 100%;
-			margin: 0 0 .5em;
+			//margin: 0 0 .25em;
 		}
 
 		img {
@@ -31,11 +31,12 @@
 		color: inherit;
 		text-decoration: none;
 		clear: both;
-		margin: 0 0 1.5em;
+		margin: 0 0 var(--flex-gap);
 		overflow: hidden;
 
 		@include phone {
-			display: block;
+			--flex-gap: 1em;
+			flex-direction: column;
 		}
 
 		&::after {
@@ -44,7 +45,7 @@
 			height: 1px;
 			width: 100%;
 			border-bottom: 1px solid var(--#{$PREFIX}-color-content-foreground);
-			opacity: 0.1;
+			opacity: 0.15;
 			//margin: 1em 0 0;
 			//margin: 0 0 1em;
 		}
@@ -55,10 +56,15 @@
 
 		a.featured-image {
 			flex-basis: var(--featured-image-width);
+
+			@include phone {
+				flex-basis: auto;
+			}
 		}
 
 		.body-container {
-			flex-basis: calc(100% - var(--featured-image-width) - var(--flex-gap));
+			//flex-basis: calc(100% - var(--featured-image-width) - var(--flex-gap));
+			flex: 1;
 		}
 
 		header {
@@ -139,7 +145,7 @@
 			font-size: 0.85rem;
 
 			@include phone {
-				font-size: 0.9rem;
+				font-size: 0.95rem;
 			}
 		}
 	}
