--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 	margin: 0 0 .5em;
 	padding: 0;
 }
-	h1 { font-size: 2.75em; }
+	h1 { font-size: 2.5em; }
 	h2 { font-size: 2.25em; }
 	h3 { font-size: 1.75em; }
 	h4 { font-size: 1.5em; }
@@ -45,6 +45,11 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
 	margin-top: 0;
+
+	&:last-child,
+	&:only-child {
+		margin-bottom: 0;
+	}
 }
 
 a {
@@ -89,6 +94,12 @@ body.editor-styles-wrapper {
 	max-width: $width-max;
 	position: relative;
 	overflow-x: visible;
+
+	& .row-container {
+		padding-left: 0;
+		padding-right: 0;
+		max-width: 100%;
+	}
 }
 
 // Images with attribution
