headers with backgrounds should be full width unless there's a sidebar

--- a/src/scss/shared/_sidebar.scss
+++ b/src/scss/shared/_sidebar.scss
@@ -23,6 +23,12 @@
 			gap: .75em;
 		}
 	}
+
+	.row.has_background {
+		margin-left: auto;
+		margin-right: auto;
+		width: 100%;
+	}
 }
 .widget-container {
 
