--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -88,6 +88,13 @@ body.editor-styles-wrapper {
 .row {
 	position: relative;
 	overflow: visible;
+
+	&.has_background {
+		margin-left: calc(50% - 50vw);
+		margin-right: calc(50% - 50vw);
+		max-width: 100vw;
+		width: 100vw;
+	}
 }
 .row-container {
 	margin: 0 auto;
@@ -98,7 +105,7 @@ body.editor-styles-wrapper {
 	& .row-container {
 		padding-left: 0;
 		padding-right: 0;
-		max-width: 100%;
+		//max-width: 100%;
 	}
 }
 
