--- a/src/scss/frontend/archives/header.scss
+++ b/src/scss/frontend/archives/header.scss
@@ -10,7 +10,7 @@ header.page_title {
 	word-break: break-word;
 
 	&.has_background {
-		padding-bottom: 1.5rem;
+		padding-bottom: 1.25rem;
 	}
 
 	h1,
@@ -20,6 +20,11 @@ header.page_title {
 		.prepend {
 			font-weight: 100;
 		}
+	}
+
+	h2 {
+		margin-top: .5em;
+		font-size: 1.15rem;
 	}
 
 	@include phone {
