--- a/src/scss/shared/_sidebar.scss
+++ b/src/scss/shared/_sidebar.scss
@@ -17,6 +17,11 @@
 		font-size: 0.85rem;
 		margin-top: 1.5em;
 
+		// Sidebars in rows that follow a header don't need a top margin (archive pages)
+		@at-root header.page_title + .row & {
+			margin-top: 0;
+		}
+
 		&.uses-widgets {
 			display: flex;
 			flex-direction: column;
