fix tax children display

--- a/src/scss/frontend/archives/_.scss
+++ b/src/scss/frontend/archives/_.scss
@@ -8,6 +8,8 @@ main.search {
 
 	@import './cards';
 
+	@import './tax-children';
+
 	/**
 	 * On the blog posts page, page content may be displayed before the archive.
 	 * This definition makes a space between that page content and the archive.
