--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -43,6 +43,17 @@ h1, h2, h3, h4, h5, h6 {
 	h4 { font-size: 1.5em; }
 	h6 { font-size: 1.15em; }
 
+	@include phone {
+		h2, h3, h4, h5, h6 {
+			line-height: 1.3;
+		}
+		h1 { font-size: 2.15em; }
+		h2 { font-size: 2em; }
+		h3 { font-size: 1.5em; }
+		h4 { font-size: 1.15em; }
+		h6 { font-size: 1em; }
+	}
+
 p {
 	margin-top: 0;
 
@@ -74,6 +85,7 @@ figure {
 	}
 }
 
+img { max-width: 100%; height: auto; }
 img:not([src]) { visibility: hidden; }
 
 body > main,
