--- a/src/scss/frontend/masthead/_.scss
+++ b/src/scss/frontend/masthead/_.scss
@@ -43,7 +43,7 @@
 		background-color: var(--#{$PREFIX}-color-masthead-background-overlay);
 		background-image: var(--#{$PREFIX}-file-masthead-background-overlay-cssurl);
 		background-position: top left;
-		background-size: cover;	
+		background-size: cover;
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -64,10 +64,8 @@
 
 
 	.row-container {
-		display: grid;
-		grid-template-columns: min-content auto max-content min-content;
-		grid-template-rows: 100%;
-		grid-template-areas: "head_logo spacer before_menu head_menu";
+		display: flex;
+		justify-content: space-between;
 
 		position: relative;
 		z-index: 2;
@@ -79,11 +77,6 @@
 			align-self: center;
 			padding: calc(var(--#{$PREFIX}-masthead-height) * 0.15) 1em;
 		}
-	}
-
-	.spacer {
-		grid-area: spacer;
-		width: 100%;
 	}
 
 	@import '_logo';
@@ -112,7 +105,6 @@
 		height: 100%;
 		width: var(--#{$PREFIX}-masthead-height);
 		//position: relative;
-		justify-self: flex-end;
 
 		@import '_hamburger';
 		@import '_menu';
