Fix block widths in editor

--- a/src/scss/backend/_.scss
+++ b/src/scss/backend/_.scss
@@ -1,12 +1,14 @@
 @import '../shared/_';
 
+/*
 .wp-block {
 	max-width: $width-max;
 }
+*/
 
 .editor-post-title__block .editor-post-title__input{
 	font-family: var(--#{$PREFIX}-font-family);
-	font-size: 3em;
+	font-size: 2.5em;
 	text-align: center;
 }
 h1, h2, h3, h4, h5, h6 {
