--- a/src/scss/shared/_fonts.scss
+++ b/src/scss/shared/_fonts.scss
@@ -3,14 +3,21 @@
  */
 
 .has-small-font-size {
-	font-size: 0.75em;
+	font-size: 0.7em;
 }
 .has-medium-font-size {
+	font-size: .85em;
+}
+.has-normal-font-size {
 	font-size: 1em;
 }
-.has-large-font-size {
-	font-size: 1.75em;
+.has-bigger-font-size {
+	font-size: 1.25
 }
-.has-larger-font-size {
-	font-size: 2.5em;
+.has-large-font-size {
+	font-size: 1.5em;
+}
+.has-larger-font-size,
+.has-huge-font-size {
+	font-size: 2em;
 }
