--- a/src/scss/shared/_social-links.scss
+++ b/src/scss/shared/_social-links.scss
@@ -22,6 +22,7 @@
 		background-color: var(--icon-color);
 		background-position: center center;
 		background-size: contain;
+		transition: all .15s;
 
 		display: block;
 
